better error handling ** replaced Logger by java.util.logging ** internationalization (not finished yet)